first two post fixed -- gallary images not loading

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
           <div style="margin-top:14px">
             <strong style="font-size:13px">Gallery</strong>
-            <div class="gallery" id="sideGallery">
+            <div class="gallery" id="sideGallery"> #FIXME - images not appearing
               <img src="https://picsum.photos/seed/a/400/300" alt="sample">
               <img src="https://picsum.photos/seed/b/400/300" alt="sample">
             </div>
